# echo-service-rust

./: Cargo.toml  Cross.toml  Dockerfile  README.md  build.sh
src/: main.rs
