[package]
name = "echo-service-rust"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-types = "2.12.0"
async-h1 = "2.3.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[dependencies.async-std]
version = "1.10.0"
features = ["attributes"]

